--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^3.28.1",
-    "@emotion/react": "^11.14.0",
-    "@reduxjs/toolkit": "^2.11.2",
-    "@tailwindcss/vite": "^4.1.18",
-    "lucide-react": "^0.563.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.13.0",
-    "tailwindcss": "^4.1.18",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.1.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "vite-jsconfig-paths": "^2.0.1"
-  }
+    "name": "hpcl-lead-intelligence-agent",
+    "version": "1.0.0",
+    "description": "HPCL Lead Intelligence Agent - B2B Sales Intelligence Platform",
+    "main": "backend/server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "NODE_ENV=development nodemon backend/server.js",
+        "dev:frontend": "cd frontend && npm run dev",
+        "build": "cd frontend && npm install && npm run build",
+        "start": "NODE_ENV=production node backend/server.js",
+        "install:all": "npm install && cd frontend && npm install",
+        "vercel-build": "cd frontend && npm install && npm run build"
+    },
+    "type": "module",
+    "keywords": ["hpcl", "lead-intelligence", "b2b", "sales", "ai"],
+    "author": "Shreyansh Agra",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.6.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^5.1.0",
+        "mongodb": "^6.20.0",
+        "mongoose": "^8.19.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    },
+    "engines": {
+        "node": ">=18.0.0",
+        "npm": ">=9.0.0"
+    }
 }
